--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "letstalk",
-  "version": "1.0.0",
-  "description": "MERN social media clone",
-  "main": "index.js",
+  "name": "letsTalk",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "test": "jest"
+    "dev": "node --watch server.js"
   },
-  "author": "Luke Hufton",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
     "morgan": "^1.10.0"
-  }
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "vite": "^4.4.0"
+  },
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
