--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-MONGODB_URI=mongodb+srv://ProPip23:KimberDB00@propip23.syftxjr.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://lhufton20:ResetMeNot00@hufton.jjvbjwx.mongodb.net/?retryWrites=true&w=majority
 APP_SECRET=tacobanana
 SALT_ROUNDS=12
 NODE_ENV=production
 GOOGLE_CLIENT_ID=912703674903-bmtcdn1dil59hugieo8e9v38a8tvr9lp.apps.googleusercontent.com
 GOOGLE_SECRET=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
 GOOGLE_CALLBACK_URL=http://localhost:3001/oauth2callback
-SECRET=SYTMAIN
+SECRET=TACOSTAND
