--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://lhufton20:ResetMeNot00@hufton.jjvbjwx.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://lhufton20:ZynCode00@work.qtjjty6.mongodb.net/?retryWrites=true&w=majority
 APP_SECRET=tacobanana
 SALT_ROUNDS=12
 NODE_ENV=production
