--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "react": "^18.2.0",
     "react-date-picker": "^10.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "react-router-dom": "^6.14.1",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "vite": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6"
   }
 }
