--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "letsTalk",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
