--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "main": "vite.config.js",
   "keywords": [],
-  "author": "",
+  "author": "Luke Hufton",
   "license": "ISC",
   "description": ""
 }
