--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "bcrypt": "^5.1.0",
-    "react": "18.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "react-router-dom": "^6.3.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^7.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react": "18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
